# laundry

./: README.md  app.py  pyproject.toml
.github/workflows/: build_and_push.yml
assets/: dashAgGridFunctions.js  site.webmanifest  style.css
assets/css/: style.css
assets/js/: plausible-init.js
data/enrichment/: ingredients_long.csv  product_sources.csv  scrape_errors.csv  summary.json  unmatched_products.csv
laundry_app/: __init__.py  callbacks.py  components.py  config.py  data.py  enrichment.py  filtering.py  types.py
laundry_app/scraping/: __init__.py  __main__.py  church_dwight.py  dirtylabs.py  dropps.py  ecos.py  html_utils.py  http.py  matching.py  models.py  normalize.py  pipeline.py  product_pages.py  registry.py  sprouts.py  wholefoods.py
tests/: test_enrichment.py  test_scraping.py
