[project]
name = "laundry-grid"
version = "0.1.0"
description = "Dash AG Grid app for laundry detergents, pretreaters, and boosters."
requires-python = ">=3.11"
dependencies = [
    "dash>=2.18",
    "dash-ag-grid>=32.3.0",
    "dash-bootstrap-components>=1.6.0",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=0.15.0",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[tool.uv]
package = false
